chart/templates/constraint-templates/91_K8sRequiredDeployment.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequireddeployment
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredDeployment
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            labels:
              type: array
              items:
                type: object
                properties:
                  key:
                    type: string
                  allowedRegex:
                    type: string
            exemptNamespaces:
              type: array
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package  main

        name = input.metadata.name

        violation[{"msg": msg, "details": {}}] {
         kubernetes.is_deployment
         msg = sprintf("Found deployment %s but deployments are not allowed", [name])
         }
